--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,9 @@ dist/
 .DS_Store
 Thumbs.db
 
-# Local-only helpers
+# Local-only helpers and docs
 setup_local_environment.sh
+PLAN.md
 
 # Large artifacts / outputs
 checkpoints/
